---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 3,
      "complexityScore": 52
    }
  ],
  "nodes": [
    {
      "id": "column_10b89c08da4a69f9",
      "type": "column",
      "label": "email",
      "qualifiedName": "customers.email",
      "canonicalName": {
        "schema": "customers",
        "name": "email"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_1d50481fe9fc4322",
      "type": "column",
      "label": "supplier_name",
      "canonicalName": {
        "name": "supplier_name"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_254d51867a59ee98",
      "type": "column",
      "label": "order_id",
      "qualifiedName": "orders.order_id",
      "canonicalName": {
        "schema": "orders",
        "name": "order_id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_557432d8eb43380f",
      "type": "column",
      "label": "order_id",
      "canonicalName": {
        "name": "order_id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_b7366b6ec23914f7",
      "type": "column",
      "label": "supplier_name",
      "qualifiedName": "suppliers.supplier_name",
      "canonicalName": {
        "schema": "suppliers",
        "name": "supplier_name"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_c76022f9d4427ec3",
      "type": "column",
      "label": "product_name",
      "qualifiedName": "products.product_name",
      "canonicalName": {
        "schema": "products",
        "name": "product_name"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_d2e94eda4ba76b6c",
      "type": "column",
      "label": "product_name",
      "canonicalName": {
        "name": "product_name"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_dacc241e355a2303",
      "type": "column",
      "label": "email",
      "canonicalName": {
        "name": "email"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_4ce0fb06426c39fb",
      "type": "table",
      "label": "suppliers",
      "qualifiedName": "suppliers",
      "canonicalName": {
        "name": "suppliers"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_7253befe2c400508",
      "type": "table",
      "label": "products",
      "qualifiedName": "products",
      "canonicalName": {
        "name": "products"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_e500054d128e991c",
      "type": "table",
      "label": "customers",
      "qualifiedName": "customers",
      "canonicalName": {
        "name": "customers"
      },
      "statementIds": [
        0
      ],
      "filters": [
        {
          "expression": "c.email = 'sample@example.com'",
          "clauseType": "WHERE"
        }
      ]
    },
    {
      "id": "table_eaa6ebb8f158751f",
      "type": "table",
      "label": "orders",
      "qualifiedName": "orders",
      "canonicalName": {
        "name": "orders"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_474dbb9f7be1aa81",
      "from": "table_7253befe2c400508",
      "to": "column_c76022f9d4427ec3",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_672b1257db7bb55c",
      "from": "output_74d22f755ec62dbc",
      "to": "column_dacc241e355a2303",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_6899d8991ef56e64",
      "from": "column_c76022f9d4427ec3",
      "to": "column_d2e94eda4ba76b6c",
      "type": "data_flow",
      "joinType": "INNER",
      "joinCondition": "p.product_id = o.product_id",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_707e70b886824bbf",
      "from": "column_254d51867a59ee98",
      "to": "column_557432d8eb43380f",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_76313beeb97b6460",
      "from": "column_b7366b6ec23914f7",
      "to": "column_1d50481fe9fc4322",
      "type": "data_flow",
      "joinType": "INNER",
      "joinCondition": "s.supplier_id = p.supplier_id",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_7cd923168b222fa0",
      "from": "table_4ce0fb06426c39fb",
      "to": "column_b7366b6ec23914f7",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_a7182fb351dec0c4",
      "from": "output_74d22f755ec62dbc",
      "to": "column_d2e94eda4ba76b6c",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_b2c886eb23cb3433",
      "from": "table_e500054d128e991c",
      "to": "column_10b89c08da4a69f9",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_cb8e18cdab2f8c9a",
      "from": "column_10b89c08da4a69f9",
      "to": "column_dacc241e355a2303",
      "type": "data_flow",
      "joinType": "INNER",
      "joinCondition": "c.customer_id = o.customer_id",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_d041cc00a4519f5a",
      "from": "output_74d22f755ec62dbc",
      "to": "column_557432d8eb43380f",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_d7ff732c218506d8",
      "from": "output_74d22f755ec62dbc",
      "to": "column_1d50481fe9fc4322",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_fa057b597723c73b",
      "from": "table_eaa6ebb8f158751f",
      "to": "column_254d51867a59ee98",
      "type": "ownership",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 4,
    "columnCount": 8,
    "joinCount": 3,
    "complexityScore": 52,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "customers",
        "columns": [
          {
            "name": "customer_id",
            "origin": "implied",
            "foreignKey": {
              "table": "orders",
              "column": "customer_id"
            }
          },
          {
            "name": "email",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "customer_id"
            ],
            "referencedTable": "orders",
            "referencedColumns": [
              "customer_id"
            ]
          }
        ]
      },
      {
        "name": "orders",
        "columns": [
          {
            "name": "customer_id",
            "origin": "implied",
            "foreignKey": {
              "table": "customers",
              "column": "customer_id"
            }
          },
          {
            "name": "order_id",
            "origin": "implied"
          },
          {
            "name": "product_id",
            "origin": "implied",
            "foreignKey": {
              "table": "products",
              "column": "product_id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "customer_id"
            ],
            "referencedTable": "customers",
            "referencedColumns": [
              "customer_id"
            ]
          },
          {
            "constraintType": "foreign_key",
            "columns": [
              "product_id"
            ],
            "referencedTable": "products",
            "referencedColumns": [
              "product_id"
            ]
          }
        ]
      },
      {
        "name": "products",
        "columns": [
          {
            "name": "product_id",
            "origin": "implied",
            "foreignKey": {
              "table": "orders",
              "column": "product_id"
            }
          },
          {
            "name": "product_name",
            "origin": "implied"
          },
          {
            "name": "supplier_id",
            "origin": "implied",
            "foreignKey": {
              "table": "suppliers",
              "column": "supplier_id"
            }
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "product_id"
            ],
            "referencedTable": "orders",
            "referencedColumns": [
              "product_id"
            ]
          },
          {
            "constraintType": "foreign_key",
            "columns": [
              "supplier_id"
            ],
            "referencedTable": "suppliers",
            "referencedColumns": [
              "supplier_id"
            ]
          }
        ]
      },
      {
        "name": "suppliers",
        "columns": [
          {
            "name": "supplier_id",
            "origin": "implied",
            "foreignKey": {
              "table": "products",
              "column": "supplier_id"
            }
          },
          {
            "name": "supplier_name",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z",
        "constraints": [
          {
            "constraintType": "foreign_key",
            "columns": [
              "supplier_id"
            ],
            "referencedTable": "products",
            "referencedColumns": [
              "supplier_id"
            ]
          }
        ]
      }
    ]
  }
}
